...
        elevation = CardDefaults.cardElevation(
            defaultElevation = 4.dp,
        ),
        modifier = Modifier.padding(bottom = 10.dp, start = 10.dp, end = 10.dp)
    ) {
        ListItem(
            modifier = Modifier.testTag("navigateToMessageDetail")
                .clickable
                {
                    onViewDetailClicked(message)
                },
            colors = ListItemDefaults.colors(
                containerColor = if(message.read) MaterialTheme.colorScheme.surface else MaterialTheme.colorScheme.primaryContainer,
...
