...
        elevation = CardDefaults.cardElevation(
            defaultElevation = 4.dp,
        ),
        modifier = Modifier.padding(bottom = 8.dp, start = 8.dp, end = 8.dp)
    ) {
        ListItem(
            modifier = Modifier.testTag("navigateToInventoryDetail")
                .clickable
                {
                    onViewDetailClicked(item)
                },
            colors = ListItemDefaults.colors(
                containerColor = MaterialTheme.colorScheme.surface,
...
